# loom-attention

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  typos.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  operator_proposal.yml  performance_regression.yml
.github/workflows/: ci.yml  pages.yml
benches/: jit_micro.rs
benchmarks/: calibrate_fp8_kv.py  create_synthetic_qwen2.py  prepare_quality_jsonl.py  vllm_engine_fp8_ab.py  vllm_engine_paged_decode.py  vllm_engine_rope_paged_kv.py  vllm_engine_speculative_decode.py  vllm_greedy_speculative_verify.py  vllm_paged_decode_attention.py  vllm_paged_decode_backend.py  vllm_paged_decode_shape_sweep.py  vllm_rope_paged_kv.py
bridge/: quillcache_store_demo.py  quillcache_v1_connector.py
crates/attnarc/: Cargo.toml
crates/attnarc/src/: catalog.rs  lib.rs  types.rs
crates/attnarc/src/pool/: mod.rs
crates/loom-cuda/: README.md
crates/loom-cuda-bridge/include/: loom_cuda_bridge.h
crates/loom-cuda-bridge/src/: cuda.rs
crates/loom-cuda-sys/: build.rs
crates/loom-cuda-sys/cuda/include/: loom_cuda.h
crates/loom-cuda-sys/cuda/src/: greedy_speculative_verify.cu
crates/loom-cuda-sys/src/: lib.rs
crates/loom-cuda/examples/: rust_cuda_smoke.rs
crates/loom-cuda/src/: greedy_sample.rs  lib.rs  min_p.rs  paged_decode.rs  rms_norm.rs  rope_paged_kv.rs  runtime.rs  silu_and_mul.rs  speculative.rs
crates/loom-kernels/src/: backend.rs  contract.rs  lib.rs  speculative.rs  tests.rs
crates/quill-df/src/: exec.rs  expr.rs
crates/quill-jit/src/dialect/: mod.rs
crates/quill-jit/src/mlir/: emit.rs
crates/quill-plan/src/: expr.rs
crates/quill-runtime/src/: array.rs  eval.rs  group.rs  kernel.rs  tests.rs  value.rs
crates/quillcache-catalog/: Cargo.toml
crates/quillcache-catalog/src/: lib.rs
crates/quillcache-control/: Cargo.toml
crates/quillcache-control/src/: lib.rs
crates/quillcache-core/: Cargo.toml
crates/quillcache-core/src/: attention.rs  control.rs  lib.rs  runtime.rs  scheduler.rs  transport.rs  types.rs
crates/quillcache-core/src/pool/: mod.rs
crates/quillcache-gateway/: Cargo.toml
crates/quillcache-gateway/src/: lib.rs
crates/quillcache-index-holt/src/: lib.rs
crates/quillcache-index-rocksdb/src/: lib.rs
crates/quillcache-router/: Cargo.toml
crates/quillcache-router/src/: lib.rs
crates/quillcache-sim/: Cargo.toml
crates/quillcache-sim/src/: lib.rs  safe_reuse.rs
crates/quillcache-store/: Cargo.toml
crates/quillcache-store/src/: allocation_strategy.rs  allocator.rs  count_min_sketch.rs  disk_tier.rs  lib.rs  master_election.rs  master_service.rs  offset_allocator.rs  replica.rs  types.rs
crates/quillcache-transfer-engine/src/: endpoint_store.rs  lib.rs  multi_transport.rs  transport.rs
cuda/include/: loom_cuda.h
cuda/src/: paged_decode_attention.cu  rope_paged_kv.cu
deploy/: README.md  modal_vllm_connector.py  modal_vllm_connector_check.py  modal_vllm_introspect.py
docs/: README.md  architecture.md  compatibility.md  index.html  m3-real-vllm.md  mvp.md  operator-catalog.md  platform-plan.md  protocols.md  real-engine-pool.md  roadmap.md  runtime-control-plane.md  status.md  vllm-local-backend.md
docs/design/: architecture.md  fp8-kv-cache.md  operator-library.md  paged-decode-attention.md
docs/guides/: two-gpu-route-q.md  vllm-ir-provider.md  vllm-local-backend.md
docs/research/: bytedance-aml-reading-map.md  flux-comet-overlap-notes.md  megascale-infer-notes.md
docs/results/: README.md  h20-paged-decode-interleaved-shape-sweep-20260722.json  h20-paged-decode-odd-gqa-20260722.json  h20-paged-decode-qwen-batch-sweep-20260722.json  h20-rope-paged-kv-20260722.json  h20-rope-paged-kv-large-20260722.json  h20-single-rust-bridge-compatibility-20260723.json  h20-vllm-compatibility-rust-bridge-20260723.json  h20-vllm-paged-decode-backend-20260722.json  h20-vllm-paged-decode-engine-baseline-first-20260722.json  h20-vllm-paged-decode-engine-loom-first-20260722.json  h20-vllm-paged-decode-tail-gqa-backend-20260722.json  h20-vllm-qwen25-05b-fp8-engine-20260722.json  h20-vllm-qwen25-paged-decode-rejected-20260722.json  h20-vllm-qwen25-rope-paged-kv-engine-20260722.json  h20-vllm-qwen25-rope-paged-kv-engine-loom-first-20260722.json  modal-vllm-l4-binding-2026-07-20.json
docs/src/: architecture.md
examples/: quillcache-gateway.yaml  quillcache-mixed-fleet.yaml  quillcache-modal-roundrobin.yaml  quillcache-pd-tiered.yaml
python/: LICENSE  README.md  build_native.py  build_torch_extension.py  build_wheel.py  pyproject.toml  setup.py
python/attnarc_engine/: __init__.py  vllm_plugin.py  vllm_smoke.py
python/csrc/: rope_kv.cpp  torch_ops.cpp
python/loom_attention/: __init__.py  attention_state.py  two_gpu_benchmark.py  two_gpu_smoke.py
python/quillcache_engine/: __init__.py  vllm_plugin.py
python/src/loom_attention/: __init__.py  block_binding.py  paged_executor.py  vllm_binding.py  vllm_connector.py  vllm_plugin.py
python/src/loom_kernels/: __init__.py  _native.py  _native_build.py  _torch_dispatch.py  _torch_extension.py  torch_ops.py  vllm.py
python/src/loom_kernels/ops/: _common.py  activation.py  attention.py  norm.py  rope_kv.py  speculative.py  telemetry.py
python/src/loom_kernels/vllm/: _rope_kv_fusion.py  rope_kv.py
python/tests/: test_attention_state.py  test_block_binding.py  test_greedy_speculative_verify.py  test_local_delegate.py  test_paged_decode_attention.py  test_paged_executor.py  test_rope_paged_kv.py  test_silu_and_mul_dynamic_fp8.py  test_step_metadata.py  test_torch_ops.py  test_two_gpu_smoke.py  test_vllm_binding.py  test_vllm_connector.py  test_vllm_ir.py  test_vllm_plugin.py  test_vllm_smoke.py
python/tests/integration/: __init__.py  modal_vllm.py  two_gpu_benchmark.py  two_gpu_smoke.py  vllm_smoke.py
services/quillcache-attention-worker/: Cargo.toml
services/quillcache-attention-worker/src/: main.rs
src/: gateway.rs  main.rs  store_master_http.rs
tests/: df_arrow_parquet.rs
tools/: action_sink_mock.py
website/src/data/: site.ts
website/src/pages/: benchmarks.astro  index.astro
(+7 files in other folders)
