[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-attention-engine"
version = "2.0.0a1"
description = "Python integration and data-path tools for the Loom attention runtime"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
vllm = ["vllm>=0.25,<0.26"]
cuda = ["torch>=2.4"]
flashinfer = ["torch>=2.4", "flashinfer-python>=0.6,<0.7"]

[project.entry-points."vllm.general_plugins"]
loom = "loom_attention.vllm_plugin:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["loom_attention*"]
