[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-kernels"
version = "1.0.0a1"
description = "PyTorch and vLLM adapters for the Loom Kernels CUDA backend"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["cuda", "inference", "llm", "pytorch", "rust", "vllm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Documentation = "https://feichai0017.github.io/loom-kernels/"
Issues = "https://github.com/feichai0017/loom-kernels/issues"
Repository = "https://github.com/feichai0017/loom-kernels"

[project.optional-dependencies]
torch = ["torch>=2.4"]
vllm = ["vllm>=0.24,<0.26"]
test = ["pytest>=8"]

[project.entry-points."vllm.general_plugins"]
loom_kernels = "loom_kernels.vllm:register_vllm_ir"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
