[package]
name = "quillcache-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control-plane residency directory and Holt-backed object catalog"

[dependencies]
holt.workspace = true
quillcache-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
