[package]
name = "quillcache-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core contracts, state, planning, and reference implementations for QuillCache"

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
