[package]
name = "quillcache-sim"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Simulation harness for QuillCache research"
license = "MIT"
repository = "https://github.com/feichai0017/quillcache"

[dependencies]
quillcache-core = { path = "../quillcache-core", version = "0.1.0-alpha.1" }
quillcache-router = { path = "../quillcache-router", version = "0.1.0-alpha.1" }
serde = { workspace = true }
thiserror = { workspace = true }
