[package]
name = "quillcache-store"
version = "1.0.0-alpha.1"
edition = "2021"
description = "Faithful Rust port of Mooncake's mooncake-store: two-phase-Put Client + MasterService + buffer allocator + replica model, with an identity guard and a crash-consistent durable tier"
license = "MIT"
repository = "https://github.com/feichai0017/quillcache"

[dependencies]
quillcache-core = { version = "1.0.0-alpha.1", path = "../quillcache-core" }
quillcache-transfer-engine = { version = "1.0.0-alpha.1", path = "../quillcache-transfer-engine" }
bytes = "1"
crc32fast = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
# etcd-backed master leader election (the `etcd` feature). Off by default; pulls
# etcd-client (gRPC/prost — build needs protoc), like the transfer engine's etcd
# metadata backend.
etcd-client = { version = "0.14", optional = true }

[features]
# Mooncake's HA mode: multiple master nodes coordinated through an etcd cluster,
# which elects one leader. Needs a running etcd; the integration test is #[ignore].
etcd = ["dep:etcd-client"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "net"] }
